--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,9 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 
+# tell it to save/restore vim sessions
+set -g @resurrect-strategy-vim 'session'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf
 run -b '~/.tmux/plugins/tpm/tpm'
 
