--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,3 +21,5 @@ set -g @resurrect-strategy-vim 'session'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf
 run -b '~/.tmux/plugins/tpm/tpm'
 
+# pass some key combinations on to terminal (that get otherwise swallowed by tmux)
+set-window-option -g xterm-keys on 
